--- a/catalog.html
+++ b/catalog.html
@@ -8,12 +8,12 @@
   
   <header>
     <div>
-      <a class="logo"><img src="img/index-logo.svg" alt="Логотип Gllacy Shop"></a>
+      <a href="/index" class="logo"><img src="img/index-logo.svg" alt="Логотип Gllacy Shop"></a>
       <nav>
         <ul class="main-nav">
-          <li><a href="catalog">Каталог</a></li>
-          <li><a href="delivery and payment">Доставка и оплата</a></li>
-          <li><a href="about company">О компании</a></li>
+          <li><a href="/catalog">Каталог</a></li>
+          <li><a href="/delivery-and-payment">Доставка и оплата</a></li>
+          <li><a href="/about-company">О компании</a></li>
         </ul>
       </nav>
           
@@ -27,7 +27,7 @@
     
     <div class="contacts">
       <span>с 10 до 20, ежедневно</span>
-      <a href="tel:8 812 450-25-25">8 812 450-25-25</a>
+      <a href="tel:88124502525">8 812 450-25-25</a>
     </div>
   </header>
 
