--- a/catalog.html
+++ b/catalog.html
@@ -44,77 +44,71 @@
 
     <section class="products">
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream1.jpg" alt="">
         <span>310р<span>/кг</span></span>
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
       </div>
       
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream2.jpg" alt="">
         <span>380р<span>/кг</span></span>
-        <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-      </div>
-      
-      <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
-        <span>3800р<span>/кг</span></span>
         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream3.jpg" alt="">
         <span>355р<span>/кг</span></span>
         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </div>
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream4.jpg" alt="">
         <span>415р<span>/кг</span></span>
         <a href="#">Сливочное крем-брюле с карамельной подливокй</a>
       </div>
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream5.jpg" alt="">
         <span>325р<span>/кг</span></span>
         <a href="#">Сливочное с брусничным джемом</a>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream6.jpg" alt="">
         <span>410р<span>/кг</span></span>
         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream7.jpg" alt="">
         <span>375р<span>/кг</span></span>
         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream8.jpg" alt="">
         <span>320р<span>/кг</span></span>
         <a href="#">Сливочное с шоколадной стружкой</a>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream9.jpg" alt="">
         <span>440р<span>/кг</span></span>
         <a href="#">Сливочно-ванильное с кусочками шоколада</a>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream10.jpg" alt="">
         <span>р<span>/кг</span></span>
         <a href="#">Сливочное с ментоловым сиропом</a>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream11.jpg" alt="">
         <span>355р<span>/кг</span></span>
         <a href="#">Сливочное с кусочками черного шоколада</a>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150x150" alt="">
+        <img src="img/icecream12.jpg" alt="">
         <span>420р<span>/кг</span></span>
         <a href="#">Сливочное с мятным сиропом</a>
       </div>
@@ -139,7 +133,7 @@
       </ul>
   
     <div class="copyright">
-      <img src="img/logo.svg" alt="logo">
+      <img src="img/logo-htmlacademy-small.svg" alt="logo">
       <p>Сделано в <a href="#">HTML Academy</a> &copy; 2019</p>
     </div>
   </footer>
