--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   
   <header>
     <div>
-      <a href="/index" class="logo"><img src="img/index-logo.svg" alt="Логотип Gllacy Shop"></a>
+      <a href="/index" class="logo"><img src="img/index-logo.svg" width="154" height="64" alt="Логотип Gllacy Shop"></a>
       <nav>
         <ul class="main-nav">
           <li><a href="/catalog">Каталог</a></li>
@@ -44,71 +44,71 @@
 
     <section class="products">
       <div class="product">
-        <img src="img/icecream1.jpg" alt="">
+        <img src="img/icecream1.jpg" width="267" height="267" alt="">
         <span>310р<span>/кг</span></span>
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
       </div>
       
       <div class="product">
-        <img src="img/icecream2.jpg" alt="">
+        <img src="img/icecream2.jpg" width="267" height="267" alt="">
         <span>380р<span>/кг</span></span>
         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
       </div>
 
       <div class="product">
-        <img src="img/icecream3.jpg" alt="">
+        <img src="img/icecream3.jpg" width="267" height="267" alt="">
         <span>355р<span>/кг</span></span>
         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </div>
       <div class="product">
-        <img src="img/icecream4.jpg" alt="">
+        <img src="img/icecream4.jpg" width="267" height="267" alt="">
         <span>415р<span>/кг</span></span>
         <a href="#">Сливочное крем-брюле с карамельной подливокй</a>
       </div>
       <div class="product">
-        <img src="img/icecream5.jpg" alt="">
+        <img src="img/icecream5.jpg" width="267" height="267" alt="">
         <span>325р<span>/кг</span></span>
         <a href="#">Сливочное с брусничным джемом</a>
       </div>
 
       <div class="product">
-        <img src="img/icecream6.jpg" alt="">
+        <img src="img/icecream6.jpg" width="267" height="267" alt="">
         <span>410р<span>/кг</span></span>
         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
       </div>
 
       <div class="product">
-        <img src="img/icecream7.jpg" alt="">
+        <img src="img/icecream7.jpg" width="267" height="267" alt="">
         <span>375р<span>/кг</span></span>
         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
       </div>
 
       <div class="product">
-        <img src="img/icecream8.jpg" alt="">
+        <img src="img/icecream8.jpg" width="267" height="267" alt="">
         <span>320р<span>/кг</span></span>
         <a href="#">Сливочное с шоколадной стружкой</a>
       </div>
 
       <div class="product">
-        <img src="img/icecream9.jpg" alt="">
+        <img src="img/icecream9.jpg" width="267" height="267" alt="">
         <span>440р<span>/кг</span></span>
         <a href="#">Сливочно-ванильное с кусочками шоколада</a>
       </div>
 
       <div class="product">
-        <img src="img/icecream10.jpg" alt="">
+        <img src="img/icecream10.jpg" width="267" height="267" alt="">
         <span>р<span>/кг</span></span>
         <a href="#">Сливочное с ментоловым сиропом</a>
       </div>
 
       <div class="product">
-        <img src="img/icecream11.jpg" alt="">
+        <img src="img/icecream11.jpg" width="267" height="267" alt="">
         <span>355р<span>/кг</span></span>
         <a href="#">Сливочное с кусочками черного шоколада</a>
       </div>
 
       <div class="product">
-        <img src="img/icecream12.jpg" alt="">
+        <img src="img/icecream12.jpg" width="267" height="267" alt="">
         <span>420р<span>/кг</span></span>
         <a href="#">Сливочное с мятным сиропом</a>
       </div>
@@ -133,7 +133,7 @@
       </ul>
   
     <div class="copyright">
-      <img src="img/logo-htmlacademy-small.svg" alt="logo">
+      <img src="img/logo-htmlacademy-small.svg" width="108" height="39" alt="logo">
       <p>Сделано в <a href="#">HTML Academy</a> &copy; 2019</p>
     </div>
   </footer>
