--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
 
     <div>
-      <a class="logo"><img src="img/index-logo.svg" alt="Логотип Gllacy Shop"></a>
+      <a class="logo"><img src="img/index-logo.svg"  width="154" height="64" alt="Логотип Gllacy Shop"></a>
       <nav>
         <ul class="main-nav">
           <li><a href="/catalog">Каталог</a></li>
@@ -79,7 +79,7 @@
     
 
     <div class="copyright">
-      <img src="img/logo-htmlacademy-small.svg" alt="logo">
+      <img src="img/logo-htmlacademy-small.svg" width="108" height="39" alt="logo">
       <p>Сделано в <a href="#">HTML Academy</a> &copy; 2019</p>
     </div>
   </footer>
