--- a/catalog.html
+++ b/catalog.html
@@ -18,9 +18,56 @@
       </nav>
           
         <ul class="secondary-nav">
-          <li><a href="#"></a></li>
-          <li><a href="#">Вход</a></li>
-          <li><a href="#">Пусто</a></li>
+          <li>
+            <a href="#">Поиск</a>
+            <section class="visually-hidden">
+              <form action="http.//echo.htmlacademy.ru" method="post">
+                <input type="text" name="search" placeholder="Что ищем?">
+              </form>
+            </section>
+          </li>
+          <li>
+            <a href="#">Вход</a>
+            <section class="visually-hidden">
+              <form action="http.//echo.htmlacademy.ru" method="post">
+                <p>
+                  <input type="email" name="email" placeholder="Электронная почта">
+
+                </p>
+                <p>
+                  <input type="password" name="password" placeholder="Пароль">
+                </p>
+                <button type="submit">Войти</button>
+                <a href="#">Забыли пароль?</a><br>
+                <a href="#">Новая регистрация</a>
+              </form>
+            </section>
+          </li>
+          <li>
+            <a href="#">2 товара</a>
+            <section class="vissualy-hidden">
+              <ul>
+                <li>
+                  <button type="button">X</button>
+                  <img src="img/icecream1.jpg" width="267" height="267" alt="">
+                  <p>Пломбир с апельсиновым джемом</p>
+                  <span>1,5 кг х 200 руб.</span>
+                  <span>300 руб.</span>
+                </li>
+                <li>
+                  <button type="button">X</button>
+                  <img src="img/icecream3.jpg" width="267" height="267" alt="">
+                  <p>Клубничный пломбир с присыпкой из белого шоколада</p>
+                  <span>1,5 кг х 300 руб.</span>
+                  <span>0 руб.</span>
+                <form action="http.//echo.htmlacademy.ru" method="post">
+                  <button type="submit">Оформить заказ</button>
+                </form>
+
+                </li>
+              </ul>
+            </section>
+          </li>
         </ul>
       
     </div>
@@ -119,10 +166,10 @@
   <footer>
 
       <ul class="social-links">
-        <li><a href="http://twitter.com">Твиттер</a></li>
-        <li><a href="http://instagram.com">Инстаграм</a></li>
-        <li><a href="http://facebook.com">Фейсбук</a></li>
-        <li><a href="http://vk.com">вконтакте</a></li>
+        <li><a href="http://twitter.com" aria-label="Твиттер">Твиттер</a></li>
+        <li><a href="http://instagram.com" aria-label="Инстаграм">Инстаграм</a></li>
+        <li><a href="http://facebook.com" aria-label="Фейсбук">Фейсбук</a></li>
+        <li><a href="http://vk.com" aria-label="вконтакте">вконтакте</a></li>
       </ul>
   
       <ul class="other-nav">
