маленькое изменение в разметке

--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
             <form action="http.//echo.htmlacademy.ru" method="post">
               <p>
                 <input type="email" name="email" placeholder="Электронная почта">
-
               </p>
               <p>
                 <input type="password" name="password" placeholder="Пароль">
               </p>
               <button type="submit">Войти</button>
-              <a href="#">Забыли пароль?</a><br>
-              <a href="#">Новая регистрация</a>
+              <div class="form-links">
+                <a href="#">Забыли пароль?</a><br>
+                <a href="#">Новая регистрация</a>
+              </div>
             </form>
           </section>
 
