--- a/catalog.html
+++ b/catalog.html
@@ -38,8 +38,10 @@
                   <input type="password" name="password" placeholder="Пароль">
                 </p>
                 <button type="submit">Войти</button>
-                <a href="#">Забыли пароль?</a><br>
-                <a href="#">Новая регистрация</a>
+                <div class="form-links">
+                  <a href="#">Забыли пароль?</a><br>
+                  <a href="#">Новая регистрация</a>
+                </div>
               </form>
             </section>
           </li>
