сделала изменения в разметке

--- a/catalog.html
+++ b/catalog.html
@@ -20,8 +20,8 @@
         <ul class="secondary-nav">
           <li>
             <a href="#">Поиск</a>
-            <section style="display: none;">
-              <form action="http://echo.htmlacademy.ru" method="post">
+            <section>
+              <form action="https://echo.htmlacademy.ru/" method="post">
                 <label for="search">Поиск</label>
                 <input type="text" name="search" placeholder="Что ищем?" id="search">
                 <button type="submit">Отправить</button>
@@ -30,8 +30,8 @@
           </li>
           <li>
             <a href="#">Вход</a>
-            <section style="display: none;">
-              <form action="http://echo.htmlacademy.ru" method="post">
+            <section>
+              <form action="https://echo.htmlacademy.ru/" method="post">
                 <p>
                   <label for="email">Электронная почта</label>
                   <input type="email" name="email" placeholder="Электронная почта" id="email">
@@ -50,7 +50,8 @@
           </li>
           <li>
             <a href="#">2 товара</a>
-            <section style="display: none;">
+            <section>
+              <h2>Товары</h2>
               <ul>
                 <li>
                   <button type="button">X</button>
@@ -65,7 +66,7 @@
                   <a href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
                   <span>1,5 кг х 300 руб.</span>
                   <span>0 руб.</span>
-                <form action="http://echo.htmlacademy.ru" method="post">
+                <form action="https://echo.htmlacademy.ru/" method="post">
                   <button type="submit">Оформить заказ</button>
                 </form>
 
