--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="main-nav">
           <li>
             <a href="/catalog">Каталог</a>
-            <ul style="display: none;">
+            <ul>
               <li><a href="#">Новинки</a></li>
               <li><a href="#">Сливочное</a></li>
               <li><a href="#">Щербеты</a></li>
@@ -31,8 +31,8 @@
       <ul class="secondary-nav">
         <li>
           <a href="#">Поиск</a>
-          <section style="display: none;">
-            <form action="http://echo.htmlacademy.ru" method="post">
+          <section>
+            <form action="https://echo.htmlacademy.ru/" method="post">
               <label for="search">Поиск</label>
               <input type="text" name="search" placeholder="Что ищем?" id="search">
               <button type="submit">Отправить</button>
@@ -41,15 +41,15 @@
         </li>
         <li>
           <a href="#">Вход</a>
-          <section style="display: none;">
+          <section>
             <form action="http://echo.htmlacademy.ru" method="post">
               <p>
-                  <label for="email">Электронная почта</label>
-                <input type="email" name="email" placeholder="Электронная почта">
+                <label for="email">Электронная почта</label>
+                <input type="email" name="email" placeholder="Электронная почта" id="email">
               </p>
               <p>
                 <label for="password">Пароль</label>
-                <input type="password" name="password" placeholder="Пароль">
+                <input type="password" name="password" placeholder="Пароль" id="password">
               </p>
               <button type="submit">Войти</button>
               <div class="form-links">
@@ -126,10 +126,10 @@
       <p>Сделано в <a href="#">HTML Academy</a> &copy; 2019</p>
     </div>
   </footer>
-    <section style="display: none;">
+    <section>
       <h1>Мы обязательно вам ответим!</h1>
       <button type="button">X</button>
-      <form action="http.//echo:htmlacademy.ru" method="post">
+      <form action="https://echo.htmlacademy.ru/" method="post">
       <p>
         <label for="name">Как вас зовут?</label>
         <input type="text" name="name" placeholder="Как вас зовут?" id="name">
