добавила Visully-hidden, скрытый заголовок, и поменяла id

--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,7 @@
           <li>
             <a href="#">2 товара</a>
             <section>
-              <h2>Товары</h2>
+              <h2 class="visually-hidden">Товары</h2>
               <ul>
                 <li>
                   <button type="button">X</button>
@@ -96,7 +96,7 @@
     </div>
 
     <section class="products">
-      <h2>Продукты</h2>
+      <h2 class="visually-hidden">Продукты</h2>
       <div class="product">
         <img src="img/icecream1.jpg" width="267" height="267" alt="">
         <span>310р<span>/кг</span></span>
