--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h1>Gllacy Shop</h1>
 
     <section class="features">
-      <h2>Особенности</h2>
+      <h2 class="visually-hidden">Особенности</h2>
       <b>Магазин Глейси- это онлайн- и офлайн-магазин по продаже мороденого собственного производство на развес</b>
       <div>
         <p>Все наше мороженое изготовливается на собственном производстве, с изпользованием современного оборудования и проверенных временем технологий.</p>
@@ -87,12 +87,13 @@
     </section>
     
     <section>
-      <h2>Блог</h2>
+      <h2 class="visually-hidden">Блог</h2>
       <article class="blog">
         <p>Новое в нашем блоге</p>
         <h1><a href="#">10 способов сервировки фруктовых щербетов к столу</a></h1>
       </article>
       
+      <h2 class="visually-hidden">Новостная рассылка</h2>
       <article class="newsletter">
         <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
       </article>
@@ -135,8 +136,8 @@
         <input type="text" name="name" placeholder="Как вас зовут?" id="name">
       </p>
       <p>
-        <label for="email">Ваша почта для ответа?</label>
-        <input type="email" name="email" placeholder="Ваша почта для ответа?" id="email">
+        <label for="email-2">Ваша почта для ответа?</label>
+        <input type="email" name="email" placeholder="Ваша почта для ответа?" id="email-2">
       </p>
       <p>
         <label for="message">Напишите что нибудь..</label>
