добавила нормализацию, прописала числом фонвейты и использовала классы вместо теги.

--- a/catalog.html
+++ b/catalog.html
@@ -96,7 +96,7 @@
         <li><a href="creamy" class="link-light">Сливочный</a></li>
       </ul>
     
-    <h1>Сливочное мороженое</h1>
+    <h1 class="page-title">Сливочное мороженое</h1>
     
 
     <section class="products">
